syntax = "proto3";

package envoy.type.v3alpha;

option java_outer_classname = "HashPolicyProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.type.v3alpha";

import "udpa/annotations/versioning.proto";

import "validate/validate.proto";

// [#protodoc-title: Hash Policy]

// Specifies the hash policy
message HashPolicy {
  option (udpa.annotations.versioning).previous_message_type = "envoy.type.HashPolicy";

  // The source IP will be used to compute the hash used by hash-based load balancing
  // algorithms.
  message SourceIp {
    option (udpa.annotations.versioning).previous_message_type = "envoy.type.HashPolicy.SourceIp";
  }

  oneof policy_specifier {
    option (validate.required) = true;

    SourceIp source_ip = 1;
  }
}
